--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,40 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="overlay_dark_50">#40000000</color>
+    <color name="material_blue">#6452f0</color>
+    <color name="grey_10">#e6e6e6</color>
+    <color name="green_success">#155724</color>
+    <color name="colorPrimaryNight">#263238</color>
+    <color name="colorPrimaryDarkNight">#141d26</color>
+    <color name="scrim">#99323232</color>
+
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#A5A5A5</color>
+    <color name="colorAccent">#03DAC5</color>
+
+    <!-- evening resources -->
+    <color name="eveningTopGradientColor">#030632</color>
+    <color name="eveningBottomGradientColor">#4000A3</color>
+
+    <!-- morning resources -->
+    <color name="morningTopGradientColor">#32D0FC</color>
+    <color name="morningBottomGradientColor">#005CE0</color>
+
+    <!-- noon resources -->
+    <color name="noonTopGradientColor">#FC9F32</color>
+    <color name="noonBottomGradientColor">#D33A3A</color>
+
+    <!-- dawn resource -->
+    <color name="dawnTopGradientColor">#1C7891</color>
+    <color name="dawnBottomGradientColor">#162A2F</color>
+
+    <!-- night resource -->
+    <color name="nightTopGradientColor">#35416C</color>
+    <color name="nightBottomGradientColor">#151515</color>
+
+    <!-- text resource -->
+    <color name="primaryTextColor">#FFFFFF</color>
+    <color name="secondaryTextColor">#99FFFFFF</color>
+    <color name="white">#fff</color>
 </resources>
