--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -157,26 +157,25 @@
 
                     <TextView
                         android:id="@+id/current_temp_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="46dp"
+                        android:layout_width="81dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="10dp"
                         android:text="@string/temperature"
                         android:textColor="@color/white"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/location_text" />
+                        app:layout_constraintTop_toBottomOf="@+id/location_radio_group" />
 
                     <RadioGroup
                         android:id="@+id/temp_radio_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/current_temp_text"
-                        app:layout_constraintTop_toBottomOf="@id/location_radio_group">
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/current_temp_text">
 
                         <RadioButton
                             android:id="@+id/kelvin_radio_button"
@@ -205,50 +204,7 @@
                             android:text="@string/fehrenheit"
                             android:textColor="@color/white" />
                     </RadioGroup>
-
-                    <TextView
-                        android:id="@+id/wind_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="46dp"
-                        android:text="@string/wind_speed"
-                        android:textColor="@color/white"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/current_temp_text" />
-
-
-                    <RadioGroup
-                        android:id="@+id/wind_radio_group"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/wind_text"
-                        app:layout_constraintTop_toBottomOf="@id/temp_radio_group">
-
-                        <RadioButton
-                            android:id="@+id/meter_radio_button"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:buttonTint="@color/white"
-                            android:text="@string/meter_sec"
-                            android:textColor="@color/white" />
-
-                        <RadioButton
-                            android:id="@+id/miles_radio_button"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:buttonTint="@color/white"
-                            android:text="@string/miles_hour"
-                            android:textColor="@color/white" />
-                    </RadioGroup>
-
-
+up>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
