--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -170,8 +170,8 @@
 
                     <RadioGroup
                         android:id="@+id/temp_radio_group"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="317dp"
+                        android:layout_height="123dp"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -181,6 +181,7 @@
                             android:id="@+id/kelvin_radio_button"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
                             android:buttonTint="@color/white"
                             android:text="@string/kelvin"
                             android:textColor="@color/white" />
@@ -204,7 +205,7 @@
                             android:text="@string/fehrenheit"
                             android:textColor="@color/white" />
                     </RadioGroup>
-up>
+                    up>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
