--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.06" />
+        app:layout_constraintGuide_percent="0.04" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glTop2"
@@ -41,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/primaryTextColor"
-        android:textSize="62sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/glLeft"
         app:layout_constraintTop_toTopOf="@+id/glTop"
@@ -52,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/secondaryTextColor"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/glLeft"
         app:layout_constraintTop_toBottomOf="@id/txtDegree"
@@ -84,46 +91,71 @@
         app:layout_constraintStart_toStartOf="@+id/glLeft"
         app:layout_constraintTop_toBottomOf="@+id/imgIcon" />
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recy_view_condition_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/glRight"
+        app:layout_constraintStart_toStartOf="@+id/glLeft"
+        app:layout_constraintTop_toBottomOf="@+id/rvDays"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_des" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDays"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:fadeScrollbars="false"
         android:overScrollMode="never"
         android:paddingTop="32dp"
         android:paddingBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/glRight"
         app:layout_constraintStart_toStartOf="@+id/glLeft"
         app:layout_constraintTop_toBottomOf="@+id/rvTimes"
         tools:listitem="@layout/item_days" />
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="1dp"
         android:src="@drawable/ic_location"
         app:layout_constraintBottom_toBottomOf="@id/city"
-        app:layout_constraintLeft_toLeftOf="@+id/city"
+        app:layout_constraintLeft_toRightOf="@+id/city"
         app:layout_constraintTop_toTopOf="@id/city" />
 
     <TextView
         android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:minHeight="20dp"
-        android:paddingStart="20dp"
         android:paddingTop="8dp"
         android:paddingEnd="8dp"
         android:paddingBottom="8dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/glLeft"
-        app:layout_constraintTop_toBottomOf="@+id/txtDegreeRange"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="259dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDegreeRange" />
+
+    <TextView
+        android:id="@+id/day_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="@+id/glLeft"
+        app:layout_constraintTop_toBottomOf="@+id/city"
+        tools:text="sky" />
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
