--- a/app/src/main/res/layout/item_des.xml
+++ b/app/src/main/res/layout/item_des.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:padding="8dp"
-    >
+    android:padding="8dp">
 
 
     <ImageView
@@ -25,6 +25,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:textSize="14sp"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_grid" />
 
@@ -35,6 +36,7 @@
         android:layout_marginTop="8dp"
         android:paddingBottom="8dp"
         android:textSize="14sp"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="@+id/txt_grid_des"
         app:layout_constraintStart_toStartOf="@+id/txt_grid_des"
         app:layout_constraintTop_toBottomOf="@+id/txt_grid_des" />
