--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -50,9 +50,9 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="424dp"
-                    android:background="@drawable/background_dawn">
+                    android:id="@+id/ConstraintLayout_background"
+                    android:layout_width="372dp"
+                    android:layout_height="567dp">
 
                     <TextView
                         android:id="@+id/setup_text"
