--- a/app/src/main/res/layout/item_fav.xml
+++ b/app/src/main/res/layout/item_fav.xml
@@ -25,9 +25,9 @@
 
         <TextView
             android:id="@+id/locality_text"
-            android:layout_width="260dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_width="293dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="16dp"
@@ -48,7 +48,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/ic_home_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
