--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,17 @@
         android:id="@+id/navigation_home"
         android:name="com.example.weatherapp.view.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <argument
+            android:name="comeFromHome"
+            app:argType="boolean"
+            android:defaultValue="true" />
+        <argument
+            android:name="favWeather"
+            app:argType="com.example.weatherapp.model.Welcome"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -33,6 +43,9 @@
         <action
             android:id="@+id/action_navigation_fav_to_mapsFragment"
             app:destination="@id/mapsFragment" />
+        <action
+            android:id="@+id/action_navigation_fav_to_navigation_home"
+            app:destination="@id/navigation_home" />
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
@@ -42,5 +55,8 @@
             android:name="comeFromHome"
             app:argType="boolean"
             android:defaultValue="false" />
+        <action
+            android:id="@+id/action_mapsFragment_to_navigation_fav"
+            app:destination="@id/navigation_fav" />
     </fragment>
 </navigation>
