--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="colorPrimaryNight">#263238</color>
     <color name="colorPrimaryDarkNight">#141d26</color>
     <color name="scrim">#99323232</color>
+    <color name="transparent">#00000000</color>
+    <color name="haf_transparent">#33000000</color>
 
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#A5A5A5</color>
