--- a/app/src/main/res/layout/fragment_select_time_alert.xml
+++ b/app/src/main/res/layout/fragment_select_time_alert.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:clickable="true"
     android:focusable="true"
     android:gravity="bottom"
@@ -58,6 +58,23 @@
                     app:layout_constraintTop_toBottomOf="@+id/button3"
                     tools:text="12:00 AM" />
 
+
+                <Button
+                    android:id="@+id/btn_city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/white"
+                    android:padding="16dp"
+                    android:textColor="@color/black"
+                    app:cardBackgroundColor="@android:color/transparent"
+                    app:cardElevation="0dp"
+                    app:layout_constraintEnd_toEndOf="@+id/button5"
+                    app:layout_constraintHorizontal_bias="0.51"
+                    app:layout_constraintStart_toStartOf="@+id/button5"
+                    app:layout_constraintTop_toBottomOf="@+id/button5"
+                    tools:text="12:00 AM" />
+
                 <Button
                     android:id="@+id/button"
                     android:layout_width="0dp"
@@ -74,17 +91,34 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="152dp"
                     android:layout_height="46dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="36dp"
                     android:backgroundTint="@color/white"
                     android:clickable="false"
                     android:text="@string/time"
                     android:textColor="@color/black"
                     app:cornerRadius="16dp"
                     app:layout_constraintEnd_toStartOf="@+id/btnTo"
+                    app:layout_constraintHorizontal_bias="0.507"
+                    app:layout_constraintStart_toEndOf="@+id/btnFrom"
+                    app:layout_constraintTop_toBottomOf="@+id/btnTo" />
+
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="152dp"
+                    android:layout_height="46dp"
+                    android:layout_marginTop="212dp"
+                    android:backgroundTint="@color/white"
+                    android:clickable="false"
+                    android:text="@string/where"
+                    android:textColor="@color/black"
+                    app:cornerRadius="16dp"
+                    app:layout_constraintEnd_toStartOf="@+id/btnTo"
+                    app:layout_constraintHorizontal_bias="0.507"
                     app:layout_constraintStart_toEndOf="@+id/btnFrom"
                     app:layout_constraintTop_toBottomOf="@+id/btnTo" />
 
@@ -141,7 +175,7 @@
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="64dp"
-                    android:layout_marginTop="44dp"
+                    android:layout_marginTop="28dp"
                     android:layout_marginEnd="64dp"
                     android:backgroundTint="@color/white"
                     android:paddingBottom="15dp"
@@ -153,7 +187,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_time" />
+                    app:layout_constraintTop_toBottomOf="@+id/btn_city" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
