--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,9 +23,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.weatherapp.view.ui.dashboard.DashboardFragment"
+        android:name="com.example.weatherapp.view.ui.setting.SettingFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" >
+        tools:layout="@layout/fragment_setting" >
         <action
             android:id="@+id/action_navigation_dashboard_to_mapsFragment"
             app:destination="@id/mapsFragment" />
@@ -49,7 +49,7 @@
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
-        android:name="com.example.weatherapp.view.ui.MapsFragment"
+        android:name="com.example.weatherapp.view.ui.map.MapsFragment"
         android:label="MapsFragment" >
         <argument
             android:name="comeFrom"
