--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -185,6 +185,7 @@
                             android:layout_marginStart="15dp"
                             android:layout_marginEnd="15dp"
                             android:buttonTint="@color/white"
+                            android:checked="false"
                             android:text="@string/english"
                             android:textColor="@color/white" />
 
