--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,8 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:icon="@drawable/baseline_settings"
+        android:title="@string/app_settings" />
 
     <item
         android:id="@+id/navigation_notifications"
@@ -17,6 +17,6 @@
         android:title="@string/title_notifications" />
     <item
         android:id="@+id/navigation_fav"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/baseline_favorite"
+        android:title="@string/favorite" />
 </menu>
