--- a/app/src/main/res/drawable/background_morning.xml
+++ b/app/src/main/res/drawable/background_morning.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="270"
-        android:endColor="@color/morningBottomGradientColor"
-        android:startColor="@color/morningTopGradientColor" />
+        android:endColor="#3C6799"
+        android:startColor="#BCE6F5" />
 </shape>
