--- a/app/src/main/res/drawable/background_night.xml
+++ b/app/src/main/res/drawable/background_night.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="270"
-        android:endColor="@color/nightBottomGradientColor"
-        android:startColor="@color/nightTopGradientColor" />
+        android:endColor="#0F1227"
+        android:startColor="#6B92CD" />
 </shape>
