--- a/app/src/main/res/layout/alert_window.xml
+++ b/app/src/main/res/layout/alert_window.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     app:cardCornerRadius="16dp"
-
+android:backgroundTint="@color/white"
     android:padding="8dp"
     android:layout_margin="8dp"
     android:layout_height="wrap_content">
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_10">
+        >
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
@@ -21,7 +21,7 @@
             android:layout_height="45dp"
             app:autoSizeTextType="uniform"
             app:autoSizeMaxTextSize="24dp"
-            android:background="@color/black"
+            android:background="@color/dark_blue"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -30,32 +30,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="50dp"
-            android:layout_height="58dp"
+
+        <com.airbnb.lottie.LottieAnimationView
             android:layout_marginStart="16dp"
             android:layout_marginTop="52dp"
+            android:id="@+id/imge"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_broken_cloud" />
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/times"/>
 
         <TextView
             android:id="@+id/des"
-            android:layout_width="263dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/imge"
             app:layout_constraintHorizontal_bias="0.628"
-            app:layout_constraintStart_toEndOf="@+id/img"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintStart_toStartOf="@id/imge"
+            app:layout_constraintTop_toBottomOf="@+id/imge"
             tools:text="des" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn"
             android:layout_width="132dp"
             android:layout_height="48dp"
@@ -63,7 +67,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/white"
+            android:background="@drawable/back_button"
+            android:gravity="center"
             android:text="@string/ok"
             android:textColor="@color/black"
             app:cornerRadius="8dp"
