--- a/app/src/main/res/layout/item_des.xml
+++ b/app/src/main/res/layout/item_des.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
@@ -13,8 +14,8 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/txt_grid_des"
-        app:layout_constraintStart_toStartOf="@+id/txt_grid_des"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_broken_cloud" />
 
@@ -22,11 +23,11 @@
         android:id="@+id/txt_grid_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:textSize="14sp"
         android:layout_gravity="center_horizontal"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/img_grid"
+        app:layout_constraintStart_toStartOf="@+id/img_grid"
         app:layout_constraintTop_toBottomOf="@+id/img_grid" />
 
     <TextView
@@ -37,7 +38,7 @@
         android:paddingBottom="8dp"
         android:textSize="14sp"
         android:layout_gravity="center_horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/txt_grid_des"
-        app:layout_constraintStart_toStartOf="@+id/txt_grid_des"
+        app:layout_constraintEnd_toEndOf="@+id/img_grid"
+        app:layout_constraintStart_toStartOf="@+id/img_grid"
         app:layout_constraintTop_toBottomOf="@+id/txt_grid_des" />
 </androidx.constraintlayout.widget.ConstraintLayout>
