--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="purple_500">#325577</color>
+    <color name="purple_700">#325577</color>
+    <color name="teal_200">#325577</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="overlay_dark_50">#40000000</color>
@@ -15,7 +15,8 @@
     <color name="scrim">#99323232</color>
     <color name="transparent">#00000000</color>
     <color name="haf_transparent">#33000000</color>
-
+    <color name="baby_blue">#7eb0c1</color>
+<color name="dark_blue">#325577</color>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#A5A5A5</color>
     <color name="colorAccent">#03DAC5</color>
